# BProjekt

./: .gitignore  notes.md
.devcontainer/: 61-openocd-extra.rules  checkAndClearUSB.sh  devcontainer.json  esp-idf.dockerfile  makefile
ESP-WROOM-32/: .gitignore  CMakeLists.txt  Makefile  makefile  notes.md  sdkconfig  sdkconfig.old
ESP-WROOM-32/example-uart/: CMakeLists.txt
ESP-WROOM-32/main/: Kconfig.projbuild  blink.c  main.c  tests.c  uart_async_rxtxtasks_main.c
ESP-WROOM-32/main/lib/net_con/: CMakeLists.txt  (+1 more)
ESP-WROOM-32/main/lib/web_server/: CMakeLists.txt  Kconfig.projbuild
ESP-WROOM-32/main/lib/web_server/inc/: web_server.h
ESP-WROOM-32/main/lib/web_server/src/: web_server.c
ESP-WROOM-32/webapp/.devcontainer/: devcontainer.json  docker-compose.yml  frontend.dockerfile
ESP-webapp/: package-lock.json  package.json  prettier.config.js  tsconfig.json  vite.config.ts
ESP-webapp/.devcontainer/: devcontainer.json  docker-compose.yml
ESP-webapp/src/: App.tsx  Layout.tsx  main.tsx
ESP-webapp/src/components/: ControlPanel.tsx  LedControl.tsx  ResponseLog.tsx  Sidebar.tsx
ESP-webapp/src/lib/: Logger.ts  env.ts
ESP-webapp/styles/: index.css
STM32F746-DISCO/: .cproject  .gitignore  .mxproject  .project  BProjekt.ioc
STM32F746-DISCO/Core/Inc/: main.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h
STM32F746-DISCO/Core/Src/: main.c  stm32f7xx_hal_msp.c  stm32f7xx_it.c
STM32F746-DISCO/Helpers/Inc/: flag_tools.h
STM32F746-DISCO/Helpers/Src/: flag_tools.c
STM32F746-DISCO/delHelpers/Src/: flag_tools.c
STM32F746-DISCO/helpers/Inc/: flag_tools.h
(+9 files in other folders)
